--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             
             <div class="err-icon"> 
 
-            <form action="#" method="get" name="emailform" novalidate>
+            <form action="#" method="get" name="emailform">
             <input type="email" name="email" placeholder="Email Address" id="email-input" required>
             <button type="button" onclick="validateEmail()" class="arrow" id="btn"><img src="images/icon-arrow.svg" id="arror-submit-button"></button>
                        <div class="error-icon-div"><img id="err-img"src="images/icon-error.svg" alt=""></div>
